src/test/deca/context/invalid/test_error_3.51-2.deca
// Description:
//    Soulève l'erreur (3.51)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'int' et 'boolean' ne sont pas compatibles avec l'opérateur binaire '%' (règle 3.51)
//
// Historique:
//      cree le 06/01/2022

{
	int var;
    var = 1 % true;
}
